Fixed a bug where Animations where appearing late and out of the screen

--- a/src/index.css
+++ b/src/index.css
@@ -31,7 +31,6 @@ body {
   color: #523122;
   font-family: "Antonio", sans-serif;
   overflow-x: hidden;
-  scroll-behavior: smooth;
   scrollbar-width: none; /* Firefox */
   -ms-overflow-style: none; /* IE 10+ */
 }
@@ -231,6 +230,7 @@ body::-webkit-scrollbar {
 
   .testimonials-section {
     @apply bg-milk relative w-full h-[120dvh];
+    margin-top: -140vh;
 
     .pin-box {
       @apply flex items-center justify-center w-full ps-52 absolute 2xl:bottom-32 bottom-[50vh];
